[package]
name = "feather_core"
version = "0.3.0"
authors = ["caelunshun <caelunshun@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
feather_codegen = { path = "../codegen" }
feather_blocks = { path = "../blocks" }
feather_items = { path = "../items" }
lazy_static = "1.3.0"
derive-new = "0.5.7"
uuid = "0.7.4"
cfb8 = "0.3.2"
aes = "0.3.2"
flate2 = "1.0.9"
bytes = { git = "https://github.com/caelunshun/bytes" }
log = "0.4.8"
serde = { version = "1.0.98", features = ["derive"] }
num-traits = "0.2.8"
num-derive = "0.2.5"
hashbrown = { version = "0.5.0", features = ["serde"] }
hematite-nbt = { git = "https://github.com/caelunshun/hematite_nbt" }
byteorder = "1.3.2"
failure = "0.1.5"
tokio = "=0.2.0-alpha.1"